Añadido links despliegue

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/ULL-ESIT-DSI-1617/programacion-orientada-a-objetos-y-herencia-en-javascript-aitor-nestor-omar-35l2v3#readme",
   "engines": {
     "node": "7.1.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^0.12.0"
   }
 }
